
Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]

==Bug Fixes==
 
 *[#1177] thumbnail support for soft linked photos
 **added soft link path resolution to thumbnail service in jargon-data-utils
 
==Features==

*[#984] iDrop web '2.0' redesign effort
**Added additional fields to the user profile, such as eduPerson attributes
**Added 'starring' support to the jargon-user-tagging package, managing the starring of files and collections
**Added UploadsService to jargon-data-utils to help manage an 'uploads' directory convention.  This provides a standard place to receive uploads from various clients.

 [#1107] support for large collection paging
 **Added totalRecords to IRODSDomainObject so that returned objects from queries can carry the total number of results
 **CollectionAndDataObjectListAndSearchAO results now include total record counts when available  
 **Adding pagination package to jargon-data-utils, providing a model that can be used to build smart paging controls into interfaces
 **Added a listDataObjectsAndCollectionsUnderPathProducingPagingAwareCollectionListing to CollectionAndDataObjectListAndSearchAO, which
 lists child data objects and collections, and provides addtional information on the paging status of the independent collections and data objects.
 
* [#511] add list shared data objs and permissions in coll and data obj list entry
**Added IRODSSharingService and related code in the jargon-user-tagging project.  The org.irods.jargon.usertagging.sharing
contains code to make shares a first-class object in Jargon, and works similar to the starred folder.  The top level
of a share is marked with a special AVU, and the service includes code to manage and query shares in various ways.
**Added a new DiscoveredServerPropertiesCache to the org.irods.jargon.core.connection package.  This is a dynamic cache of 