@@ -43,7 +43,7 @@ jargon.io.local.input.stream.buffer.size=16384
 jargon.put.buffer.size=4194304
 # size of buffer used in get operations (file segment size per call to DataObjInp)
 jargon.get.buffer.size=4194304
-# enables reconnect option sent in startup pack and used in connection handling (as in teh -T icommand option (work in progress)
+# enables reconnect option sent in startup pack and used in connection handling (as in the -T icommand option (work in progress)
 jargon.reconnect=true
 # if jargon.reconnect is true, this is the time in milliseconds before restarting, default is 10 minutes
 jargon.reconnect.time.in.millis=600000
