@@ -44,6 +44,9 @@ Note that the following bug and feature requests are logged in GForge with relat
  *[#1177] thumbnail support for soft linked photos
  **added soft link path resolution to thumbnail service in jargon-data-utils
  
+ *[#1205] error accessing tickets (-80600) on srbbrick15
+ **Added CatalogSQLException handling in error scanner to better trap this error as a specific Jargon exception
+ 
 ==Features==
 
 *[#984] iDrop web '2.0' redesign effort
